# IncomeApp-Rust

./: Cargo.toml
src/: main.rs
